// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.steps.io;

option java_multiple_files = true;

import "io/harness/logging/unit_progress.proto";
import "io/harness/pms/contracts/execution/failure/failure_info.proto";
import "io/harness/pms/contracts/execution/skip/skip_info.proto";
import "io/harness/pms/contracts/execution/run/node_run_info.proto";
import "io/harness/pms/contracts/execution/status.proto";
import "io/harness/pms/contracts/steps/io/step_outcome_proto.proto";

message StepResponseProto {
  execution.Status status = 1;
  repeated StepOutcomeProto stepOutcomes = 2;
  execution.failure.FailureInfo failureInfo = 3;
  execution.skip.SkipInfo skipInfo = 4;
  repeated logging.UnitProgress unitProgress = 5;
  repeated StepOutcomeProto graphOutcomes = 6;
  execution.run.NodeRunInfo nodeRunInfo = 7;
}
